horizontal scroll fixed

--- a/src/app/components/skills/skills.component.scss
+++ b/src/app/components/skills/skills.component.scss
@@ -14,17 +14,28 @@
   justify-content: space-between;
   align-items: flex-start;
   width: 100%;
-  // border-top: 2px solid $secondary_color;
-  overflow-x: overlay;
-  overflow-y: visible;
+  overflow-x: scroll;
   transition: all 0.2s;
   will-change: transform;
+  -webkit-user-select: none;
   user-select: none;
   cursor: grab;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.skills-section-content::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.skills-section-content {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
 .horizontal-line{
   position: absolute;
-  top: 47px;
+  top: 67px;
   left: 0;
   width: 100%;
   height: 2px;
@@ -45,6 +56,7 @@
   text-align: center;
   min-width: 300px;
   height: 380px;
+  margin-right: 150px;
 
   img {
     width: 90px;
