--- a/src/app/components/work/work.component.scss
+++ b/src/app/components/work/work.component.scss
@@ -44,6 +44,7 @@
       background-color: rgba(100, 100, 100, 0.3);
       padding: 10px 15px;
       border-radius: 35px;
+      -webkit-backdrop-filter: blur(5px);
       backdrop-filter: blur(5px);
       width: 250px;
       text-align: center;
